@@ -2047,28 +2047,13 @@ for \\[find-tag] (which see)."
 			      (get major-mode 'find-tag-default-function)
 			      'find-tag-default)))
         (comp-table (tags-lazy-completion-table))
-	beg
-	completion)
+	beg)
     (or pattern
 	(error "Nothing to complete"))
     (search-backward pattern)
     (setq beg (point))
     (forward-char (length pattern))
-    (setq completion (try-completion pattern comp-table))
-    (cond ((eq completion t))
-	  ((null completion)
-	   (message "Can't find completion for \"%s\"" pattern)
-	   (ding))
-	  ((not (string= pattern completion))
-	   (delete-region beg (point))
-	   (insert completion))
-	  (t
-	   (message "Making completion list...")
-	   (with-output-to-temp-buffer "*Completions*"
-	     (display-completion-list
-	      (all-completions pattern comp-table nil)
-	      pattern))
-	   (message "Making completion list...%s" "done")))))
+    (completion-in-region beg (point) comp-table)))
 
 (dolist (x '("^No tags table in use; use .* to select one$"
 	     "^There is no default tag$"
